--- a/src/app/color-picker/color-picker.component.css
+++ b/src/app/color-picker/color-picker.component.css
@@ -2,12 +2,19 @@
   display: inline-block;
   width: 30px;
   height: 30px;
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+  margin-top: 3px;
+  margin-left: 3px;
 }
 
 .color-picker__item--outer{
-  margin: 5px;
+  margin: 3px;
   display: inline-block;
 }
-.color-picker__item--active{
-  border: 1px solid black;
+.color-picker__wrapper .color-picker__item.color-picker__item--active{
+  height: 33px;
+  width: 33px;
+  position: relative;
+  margin-top: 0;
+  margin-left: 0;
 }
