--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,30 +1,41 @@
-<mat-form-field>
-  <input type="text" matInput placeholder="Name" [(ngModel)]="product.name">
-</mat-form-field>
-<mat-form-field>
-  <mat-select placeholder="Category" [(ngModel)]="product.categoryId">
-    <mat-option *ngFor="let category of constants.categories" [value]="category.id">
-      {{ category.value }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-<mat-form-field>
-  <mat-select placeholder="Size" [(ngModel)]="product.sizeId">
-    <mat-option *ngFor="let size of constants.sizes" [value]="size.id">
-      {{ size.value | uppercase }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-<app-color-picker [colors]="constants.colors" [selectedColor]="product.colorId"
-                  (selectedColorChanged)="selectedColorChanged($event)"></app-color-picker>
-<mat-form-field>
-  <input type="text" matInput placeholder="Image Url" [(ngModel)]="product.imageUrl">
-</mat-form-field>
-<mat-form-field>
-  <input type="number" matInput placeholder="Price" [(ngModel)]="product.price">
-</mat-form-field>
-<mat-form-field>
-  <textarea matInput placeholder="Description" [(ngModel)]="product.description"></textarea>
-</mat-form-field>
-
-<button mat-button (click)="saveProduct()" color="primary">Save</button>
+<div class="edit-card__wrapper">
+<mat-card>
+  <mat-card-title>
+    Edit product
+  </mat-card-title>
+  <mat-card-content>
+    <mat-form-field>
+      <input type="text" matInput placeholder="Name" [(ngModel)]="product.name">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-select placeholder="Category" [(ngModel)]="product.categoryId">
+        <mat-option *ngFor="let category of constants.categories" [value]="category.id">
+          {{ category.value }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-select placeholder="Size" [(ngModel)]="product.sizeId">
+        <mat-option *ngFor="let size of constants.sizes" [value]="size.id">
+          {{ size.value | uppercase }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <app-color-picker [colors]="constants.colors" [selectedColor]="product.colorId"
+                      (selectedColorChanged)="selectedColorChanged($event)"></app-color-picker>
+    <mat-form-field>
+      <input type="text" matInput placeholder="Image Url" [(ngModel)]="product.imageUrl">
+    </mat-form-field>
+    <mat-form-field>
+      <input type="number" matInput placeholder="Price" [(ngModel)]="product.price">
+    </mat-form-field>
+    <mat-form-field>
+      <textarea matInput placeholder="Description" [(ngModel)]="product.description"></textarea>
+    </mat-form-field>
+  </mat-card-content>
+   <mat-card-actions>
+     <button mat-button (click)="goBack()" color="primary">Back</button>
+     <button mat-button (click)="saveProduct()" color="primary">Save</button>
+   </mat-card-actions>
+</mat-card>
+</div>
