--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
+body{
+  background-color: rgb(250, 250, 250);
+}
+
+.mat-form-field{
+  display: block !important;
+}
+
