добавлена тестовая корзина

--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,3 +1,41 @@
-<p>
-  detail works!
-</p>
+<div class="detail-card__wrapper">
+  <mat-card>
+    <mat-card-title>
+      Product detail
+    </mat-card-title>
+    <mat-card-content>
+      <mat-form-field>
+        <input type="text" matInput placeholder="Name" [(ngModel)]="product.name" [disabled]="true">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-select placeholder="Category" [(ngModel)]="product.categoryId" [disabled]="true">
+          <mat-option *ngFor="let category of constants.categories" [value]="category.id">
+            {{ category.value }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-select placeholder="Size" [(ngModel)]="product.sizeId" [disabled]="true">
+          <mat-option *ngFor="let size of constants.sizes" [value]="size.id">
+            {{ size.value | uppercase }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <app-color-picker [colors]="constants.colors" [selectedColor]="product.colorId" [disabled]="true"
+                        (selectedColorChanged)="selectedColorChanged($event)"></app-color-picker>
+      <mat-form-field>
+        <input type="text" matInput placeholder="Image Url" [(ngModel)]="product.imageUrl" [disabled]="true">
+      </mat-form-field>
+      <mat-form-field>
+        <input type="number" matInput placeholder="Price" [(ngModel)]="product.price" [disabled]="true">
+      </mat-form-field>
+      <mat-form-field>
+        <textarea matInput placeholder="Description" [(ngModel)]="product.description" [disabled]="true"></textarea>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button (click)="goBack()" color="primary">Back</button>
+      <button mat-button (click)="addToCart(product)" color="primary">Add to cart</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
