--- a/src/app/admin-actions/admin-actions.component.html
+++ b/src/app/admin-actions/admin-actions.component.html
@@ -1,2 +1,2 @@
-<a mat-button color="primary" routerLink="/edit-product/{{guid}}">Edit</a>
-<button mat-button color="primary" (click)="deleteProduct(guid)">Delete</button>
+<a mat-raised-button color="primary" routerLink="/edit-product/{{guid}}">Edit</a>
+<button mat-raised-button color="warn" (click)="deleteProduct(guid)">Delete</button>
