--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -34,8 +34,8 @@
     </mat-form-field>
   </mat-card-content>
    <mat-card-actions>
-     <button mat-button (click)="goBack()" color="primary">Back</button>
-     <button mat-button (click)="saveProduct()" color="primary">Save</button>
+     <button mat-raised-button (click)="goBack()" color="accent">Back</button>
+     <button mat-raised-button (click)="saveProduct()" color="primary">Save</button>
    </mat-card-actions>
 </mat-card>
 </div>
