--- a/src/app/management-page/management-page.component.html
+++ b/src/app/management-page/management-page.component.html
@@ -1,1 +1,4 @@
+<div class="admin-actions">
+    <a routerLink="/add-product" mat-raised-button color="primary">Add product</a>
+</div>
 <app-list-view [products]="products" [editMode]="true"></app-list-view>
