--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
-body{
+.main{
   background-color: rgb(250, 250, 250);
 }
 
 .mat-form-field{
   display: block !important;
 }
+.mat-tab-link:focus {
+  outline: 0;
+  opacity: 1;
+  color: rgba(0, 0, 0, 0.5);
+}
 
+.mat-dialog-content{
+  font-family: Roboto,"Helvetica Neue",sans-serif;
+  font-size: 16px;
+}
+
+.mat-dialog-actions .mat-button{
+  margin: 0 auto;
+}
